--- a/Gateway/src/main/resources/application.properties
+++ b/Gateway/src/main/resources/application.properties
@@ -2,3 +2,16 @@
 server.port=8080
 spring.application.name=gateway-server
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
+
+zuul.routes.partner-manage-service.path=/partner/**
+zuul.routes.partner-manage-service.service-id=partner-manage-service
+#zuul.routes.partner-manage-service.strip-prefix=false
+
+zuul.routes.information-manage-service.path=/projects/**
+zuul.routes.information-manage-service.service-id=information-manage-service
+#zuul.routes.information-manage-service.strip-prefix=false
+
+zuul.routes.staff-manage-service.path=/staffs/**
+zuul.routes.staff-manage-service.service-id=staff-manage-service
+#zuul.routes.staff-manage-service.strip-prefix=false
+
